# musicNFT

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.dev.yml  docker-compose.yml  gunicorn.dev.py  ilija.txt  manage.py  pyproject.toml
.github/workflows/: master.yml  pr.yml
backend/: .gitignore  manage.py
backend/authentication/: models.py
backend/authentication/migrations/: 0001_initial.py
backend/core/utils/: collections.py  cryptography.py  misc.py  settings.py  types.py
backend/dashboard/: admin.py  models.py  urls.py  views.py
backend/dashboard/migrations/: 0001_initial.py  0002_rename_price_orderhistory_amount_and_more.py
backend/musicNFT/: urls.py  wsgi.py
backend/musicNFT/settings/: __init__.py  base.py  custom.py  docker.py  email.py  envvars.py  jwt.py  logging.py
backend/musicNFT/settings/templates/: settings.github.py  settings_dev.py
backend/templates/: base.html  home.html
backend/users/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_newuser_is_active.py  0003_userprofile.py  0004_alter_userprofile_eth_address_and_more.py  0005_onetimepassword.py  0006_delete_onetimepassword.py
front_end/: package-lock.json  package.json
musicNFT/: asgi.py  settings.py  urls.py
registration/: views.py
scripts/: entrypoint.sh  production_data.py
templates/: index.html
