[tool.poetry]
name = "musical-nft"
version = "0.1.0"
description = ""
authors = ["ilija <ilijapet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.7"
web3 = "^6.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
