[tool.poetry]
name = "musical-nft"
version = "0.1.0"
description = ""
authors = ["ilija <ilijapet@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.8.1"
django = "^4.2.7"
web3 = "^6.11.3"
gunicorn = "20.1.0"
djangorestframework = "^3.14.0"
django-environ = "0.9.0"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
mypy = "^1.7.1"
psycopg2 = "^2.9.9"
pynacl = "^1.5.0"
pydantic = "^1.10.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
colorlog = "^6.7.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
align_closing_bracket_with_visual_indent = true
based_on_style = "google"
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
