[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ilija <ilijapet@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
django = "^4.2.7"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pydantic = "^1.10.7"
pynacl = "^1.5.0"
python = "^3.8.1"
web3 = "^6.11.3"
gunicorn = "20.1.0"
django-environ = "0.9.0"
mypy = "^1.7.1"
django-cors-headers = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
pillow = "^9.5.0"
whitenoise = "^6.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
colorlog = "^6.7.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.musicNFT.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["backend"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"